LibQhy.cs


    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ControlQHYCCDShutter(IntPtr handle, byte status);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDPressure(IntPtr handle, out double pressure);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDHumidity(IntPtr handle, out double hd);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDI2CTwoWrite(IntPtr handle, ushort addr, ushort value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDI2CTwoRead(IntPtr handle, ushort addr);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern double GetQHYCCDReadingProgress(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint TestQHYCCDPIDParas(IntPtr h, double p, double i, double d);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint DownloadFX3FirmWare(ushort vid, ushort pid, [MarshalAs(UnmanagedType.LPStr)] string imgpath);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDType(IntPtr h);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDDebayerOnOff(IntPtr h, bool onoff);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDFineTone(IntPtr h, byte setshporshd, byte shdloc, byte shploc, byte shwidth);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDGPSVCOXFreq(IntPtr handle, ushort i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDGPSLedCalMode(IntPtr handle, byte i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDGPSLedCal(IntPtr handle, uint pos, byte width);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDGPSPOSA(IntPtr handle, byte is_slave, uint pos, byte width);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDGPSPOSB(IntPtr handle, byte is_slave, uint pos, byte width);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDGPSMasterSlave(IntPtr handle, byte i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDGPSSlaveModeParameter(IntPtr handle, uint target_sec, uint target_us, uint deltaT_sec, uint deltaT_us, uint expTime);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void SetQHYCCDQuit();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDVendRequestWrite(IntPtr h, byte req, ushort value, ushort index1, uint length, byte* data);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDVendRequestRead(IntPtr h, byte req, ushort value, ushort index1, uint length, byte* data);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDReadUSB_SYNC(IntPtr pDevHandle, byte endpoint, uint length, byte* data, uint timeout);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCDLibusbBulkTransfer(IntPtr pDevHandle, byte endpoint, byte* data, uint length, out int transferred, uint timeout);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDSDKVersion(out uint year, out uint month, out uint day, out uint subday);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDNumberOfReadModes(IntPtr h, out uint numModes);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDReadModeResolution(IntPtr h, uint modeNumber, out uint width, out uint height);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDReadModeName(IntPtr h, uint modeNumber, [MarshalAs(UnmanagedType.LPStr)] StringBuilder name);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDReadMode(IntPtr h, uint modeNumber);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDReadMode(IntPtr h, out uint modeNumber);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDBeforeOpenParam(ref QHYCamMinMaxStepValue p, ControlId controlId);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint EnableQHYCCDBurstMode(IntPtr h, bool i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDBurstModeStartEnd(IntPtr h, ushort start, ushort end);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint EnableQHYCCDBurstCountFun(IntPtr h, bool i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ResetQHYCCDFrameCounter(IntPtr h);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDBurstIDLE(IntPtr h);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint ReleaseQHYCCDBurstIDLE(IntPtr h);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDBurstModePatchNumber(IntPtr h, uint value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDEnableLiveModeAntiRBI(IntPtr h, uint value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDWriteFPGA(IntPtr h, byte number, byte regindex, byte regvalue);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDWriteCMOS(IntPtr h, byte number, ushort regindex, ushort regvalue);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDTwoChannelCombineParameter(IntPtr handle, double x, double ah, double bh, double al, double bl);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint EnableQHYCCDImageOSD(IntPtr h, uint i);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDPreciseExposureInfo(IntPtr h, out uint PixelPeriod_ps, out uint LinePeriod_ns, out uint FramePeriod_us, out uint ClocksPerLine, out uint LinesPerFrame, out uint ActualExposureTime, out byte isLongExposureMode);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDRollingShutterEndOffset(IntPtr h, uint row, out double offset);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDQuit();

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern QHYDWORD SetQHYCCDCallBack(QHYCCDProcCallBack ProcCallBack, int Flag);

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void RegisterPnpEventIn(void (*in_pnp_event_in_func)([MarshalAs(UnmanagedType.LPStr)] stringid));

    // [DllImport("qhyccd", CallingConvention = CallConv)]
    // public static extern void RegisterPnpEventOut(void (*in_pnp_event_out_func)([MarshalAs(UnmanagedType.LPStr)] stringid));

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint resetDev([MarshalAs(UnmanagedType.LPStr)] string deviceID, uint readModeIndex, byte streamMode, IntPtr devHandle, out uint imageWidth, out uint imageHigh, uint bitDepth);

    public delegate void DataEventFunc([MarshalAs(UnmanagedType.LPStr)] string id, byte* imgdata);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void RegisterDataEventSingle(DataEventFunc func);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void RegisterDataEventLive(DataEventFunc func);

    public delegate void TransferEventErrorFunc();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void RegisterTransferEventError(TransferEventErrorFunc func);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint PCIEClearDDR(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetReadModesNumber([MarshalAs(UnmanagedType.LPStr)] string deviceID, out uint numModes);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetReadModeName([MarshalAs(UnmanagedType.LPStr)] string deviceID, uint modeIndex, [MarshalAs(UnmanagedType.LPStr)] StringBuilder modeName);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDSensorPhaseReTrain(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDReadInitConfigFlash(IntPtr handle, byte* configString_raw64);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDEraseInitConfigFlash(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDResetFlashULVOError(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDTestFlashULVOError(IntPtr handle);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDSetFlashInitPWM(IntPtr handle, byte pwm);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDGetDebugDataD3(IntPtr handle, byte* debugData_raw64);

    // TODO: This is missing EXPORTFUNC
    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDGetDebugControlID(ControlId controlId, bool hasValue, bool isSetValue, double value);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCDEqualizeHistogram(byte* pdata, int width, int height, int bpp);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint QHYCCD_fpga_open(int id);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCD_fpga_close();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern int QHYCCD_fpga_send(int chnl, void* data, int len, int destoff, int last, ulong timeout);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern int QHYCCD_fpga_recv(int chnl, void* data, int len, ulong timeout);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern void QHYCCD_fpga_reset();

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDLoadCalibrationFrames(IntPtr handle, uint ImgW, uint ImgH, uint ImgBits, uint ImgChannel, [MarshalAs(UnmanagedType.LPStr)] string DarkFile, [MarshalAs(UnmanagedType.LPStr)] string FlatFile, [MarshalAs(UnmanagedType.LPStr)] string BiasFile);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDCalibrationOnOff(IntPtr handle, bool onoff);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDFrameDetectPos(IntPtr handle, uint pos);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDFrameDetectCode(IntPtr handle, byte code);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint SetQHYCCDFrameDetectOnOff(IntPtr handle, bool onoff);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern uint GetQHYCCDSensorName(IntPtr handle, [MarshalAs(UnmanagedType.LPStr)] StringBuilder name);

    [DllImport("qhyccd", CallingConvention = CallConv)]
    public static extern byte GetCameraIsSuperSpeedFromID([MarshalAs(UnmanagedType.LPStr)] string id);
